# Bevy-WoW

./: .gitignore  Cargo.toml  README.md
assets/: character_controller_playground.gltf  cube.gltf  pentagon.gltf  terrain.gltf
assets/Animated Characters 2/: characterMedium.gltf
src/: component.rs  interaction_flags.rs  main.rs  player.rs  resource.rs  setup.rs
